Building out product lists. New type of button-card group.

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -25,6 +25,7 @@
 // === mixins ====
 $link-color-default: #fff !default;
 $underline: false !default;
+// ex. @include link-colors (white, $color_yellow-glow, true);
 @mixin link-colors($color: $link-color-default, $hover-color: $color_yellow-glow, $has-underline: $underline ) {
     font-weight: $font-weight-bold;
     transition: border-bottom .15s linear,color .15s linear;
