--- a/source/partials/snippets/_product-list.slim
+++ b/source/partials/snippets/_product-list.slim
@@ -23,7 +23,11 @@ ruby:
   end
   cat_compliance = '<h3 class="text-light group--sm headline-4"><span class="text-bold headline-3">Build</span><br>with patient data in the cloud</h3>'
   cat_integration = '<h3 class="text-light group--sm headline-4"><span class="text-bold headline-3">Integrate</span><br>with patient data from anywhere</h3>'
-
+  if defined?(category_link) && category_link == true
+    category_link = true
+  else
+    category_link = false
+  end
   # sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
   # sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
 
@@ -39,7 +43,7 @@ ruby:
         aside.column.bg-dark.group data-theme=theme class=(is_product == true ? nil : "shrink-for-large")
           - if nav_item.section == 'Compliance' ? category = cat_compliance : category = cat_integration
           = category
-          ul.menu.button-card--container data-theme=theme
+          ul.menu.button-card--container.group--sm data-theme=theme
             - nav_item.child_data.each do | child |
               li.button-card--item class="product-#{child.title_short.parameterize}"
                 - if is_product == true && child.has_key?("icon")
@@ -54,3 +58,5 @@ ruby:
                         p.text-regular.text-small = child.desc
                 - else
                   a href=child.url title="Explore #{child.title}" data-track="true" data-track-category="nav" data-track-id="page-#{child.url.parameterize}" = child.title
+          - if category_link == true
+            = partial "partials/snippets/button", :locals => { :label => nav_item.section_link_label, :url => nav_item.section_link_uri, :button_classes => "button hollow hollow-inverted", :item_id => "get-#{nav_item.title_short.parameterize}", :data_track_group => nav_item.title_short.parameterize }
