About page work
Added investor list. need to refactor display method, there's some sizing issues at various widths.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -83,7 +83,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
   .row.align-center
     .columns.small-12.large-10
       .row.align-center.small-up-1.medium-large-up-2
-        = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_link => true }
+        = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_links => true }
 
 .strip.strip-cmi
 
