--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -55,7 +55,9 @@ timeline_company:
     body: 'Datica announces the [Cloud Compliance Management System](/cloud-compliance-management-system "CCMS") (CCMS), giving customers constant visibility of the precise state of their cloud environments.'
   -
     date: 'June 2019'
-    body: 'Datica and Sansoro Health announce merger, creating the most advanced and complete platform available to manage and integrate patient data on the cloud.'
+    body: '<p><img class="logo-size--medium" src="https://images.ctfassets.net/189dvqdsjh46/6trTrrJ1p64UgkmGIiII0y/e223aba28cde65a887468fdc9780489e/logo.svg" alt="Datica" /> + <img class="logo-size--small" src="https://images.ctfassets.net/189dvqdsjh46/5TO6aUEyrwX913VqHfwYNa/4e1d3e281fe5d003fc50f55b66482638/sansoro-logo-horiz.svg" alt="Sansoro" /></p>
+
+      Datica and Sansoro Health announce merger, creating the most advanced and complete platform available to manage and integrate patient data on the cloud.'
 stats_list:
   - 
     image: "https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/5998dc3b3ddc844ece89c4c5407fb293/3x_growth.svg"
@@ -98,15 +100,36 @@ subnav:
   -
     title: "About us"
     slug: "about"
-  -
-    title: "Leadership Team"
-    slug: "leadership"
+  # -
+  #   title: "Leadership Team"
+  #   slug: "leadership"
   -
     title: "By the numbers"
     slug: "stats"
   -
     title: "Careers"
     slug: "careers"
+investors:
+  -
+    title: "LRV Health"
+    url: "https://www.lrvhealth.com/"
+    logo: "https://images.ctfassets.net/189dvqdsjh46/6frWAjHWlL7x5jjZpi59cX/14684ccb26d2c587bebe6b5a826ddf9f/lrv-health-logo.svg"
+    size: "logo-size--medium"
+  -
+    title: "Bain Capital"
+    url: "https://www.baincapitalventures.com/"
+    logo: "https://images.ctfassets.net/189dvqdsjh46/1FORIBpnundEyWRvwt1FxG/05ef2a76d50063e095a271bf8243e024/Bain_Capital_logo.svg"
+    size: "logo-size--medium"
+  -
+    title: "Healthy Ventures"
+    url: "http://www.healthy.vc/"
+    logo: "https://images.ctfassets.net/189dvqdsjh46/7hxDYCiGMz6qE1ojWrvUPu/c82ca59aabe867720f24c898e3d94fcb/healthy-ventures-logo.png"
+    size: "logo-size--medium"
+  -
+    title: "Treehouse Health"
+    url: "https://treehouse-health.com/"
+    logo: "https://images.ctfassets.net/189dvqdsjh46/1G51f3VwycO88n03BwlvSs/e2aad94cd78ee8a29888fcc1ac0ec48f/treehouse-logo.svg"
+    size: "logo-size--medium"
 ---
 scss:
   .display-block {
@@ -160,34 +183,6 @@ scss:
       .columns.small-12.medium-9.large-6
         h3.headline-4 A Platform of Tools Designed for Healthcare Developers
         p Every verb developers are responsible for on the cloud is really hard—storing, computing, transmitting, securing. Datica makes it easy by pulling together a collection of tools under a single Business Associate Agreement. With our platform, developers can build, integrate, and monitor their patient data.
-    .row.group
-      .columns.small-12.medium-3.large-3
-        h2.headline-5.spaced-out.text-light.subheader-about How We Do It
-      .columns.small-12.medium-9.large-6
-        h3.headline-4 Best Practices are Best Practices
-        img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" width="180" /
-        p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
-
-    .row.group
-      .columns.small-12.medium-3.large-3
-        h2.headline-5.spaced-out.text-light.subheader-about How We Create Value
-      .columns.small-12.medium-9.large-6
-        h3.headline-4 Compliance Breeds Innovation
-        img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
-        p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
-
-    .row.group
-      .columns.small-12.medium-3.large-3
-        h2.headline-5.spaced-out.text-light.subheader-about What We Believe      
-      .columns.small-12.medium-9.large-6
-        h3.headline-4 Trust Is Earned
-        ul
-          li Compliance moves at the <strong>speed of trust</strong>.
-          li <strong>Transparency</strong> is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
-          li Healthcare application development shouldn't be harder than other industries just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. <strong>Compliance shouldn't block progress</strong>.
-          li Give back to the developer community whenever possible. Use <strong>open source</strong> tools whenever possible. Learn more about our <a class="" href="/open-source" title="Open source at Datica">open source contributions</a>.
-          li We know we can't make the cloud better alone. <strong>Industry collaboration</strong> is important. Work together for the greater good.
-          li We are <strong>"solutions-first"</strong>. This means Datica brings our deep healthcare, compliance, and integration expertise to work with customers to find the optimal solution — not a prefab, off-the-shelf product.
 
     .row.align-center
       .columns.small-12.large-11.text-center
@@ -196,10 +191,8 @@ scss:
           - data.views.home.customers.each do |logo| # trying this as data-interchange for perf
             img alt="#{logo["name"]}" class=("lozad logo-cloud--item logo-size--#{logo['logoSize']}") data-src="/public/img/customer-logos/sm/#{logo['file']}.png" /
 
-
-
 /.strip.strip-bright
-.bg-gray-12 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
+/.bg-gray-12 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   section.section-article.bg-white.drop
     - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
     /- execs = data.site.collections.to_a.select { | id, collection | (id == "38gnLAlscvVtQyR4wnO4w4") }
@@ -231,8 +224,8 @@ scss:
                 img.lozad width=stat.width data-src=stat.image alt=stat.desc
             - else
                 img.lozad width=stat.width data-src=stat.image alt=stat.desc
-
-  section.section-article id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
+.bg-gray-12
+  section.section-article id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
     .row.align-center
       .columns.small-12.medium-8.large-7
         h5.spaced-out.text-center Milestones
@@ -260,17 +253,13 @@ section.section-article.bg-white.drop--big
     .columns.small-12.medium-8.text-center
       h2.headline-5.spaced-out.group A Strong Backing
       .row.small-up-2.medium-up-4.align-middle
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/1FORIBpnundEyWRvwt1FxG/05ef2a76d50063e095a271bf8243e024/Bain_Capital_logo.svg" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Baird Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Chicago Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" /
-        .column
-          img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
+        - current_page.data.investors.each do | investor | 
+          .column
+            a href=investor.url title=investor.title
+            img.img-crisp.lozad class="img-crisp lozad #{investor.size}" alt=company.title data-src="#{investor.logo}?fm=png&h=120" /
 
 
-section.bg-gray-3.container-image--center.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/5sg4ICUpO4m4eX5nAwerir/abc651f00fcedcfba995a551804067d9/Datica_cities_-_live_where_you_want.jpg?w=1600" style="border: 10px solid black;" id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
+section.bg-gray-3.container-image--center.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/5sg4ICUpO4m4eX5nAwerir/abc651f00fcedcfba995a551804067d9/Datica_cities_-_live_where_you_want.jpg?w=1600" style="border: 10px solid black;" id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
   .section-article.container-color--tint-20
     .row.align-center
       .columns.small-12.medium-10.large-9.text-center
